# zero2prod

./: Cargo.toml  docker-compose.yml
.github/workflows/: checks.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
